tests/macro-tests/cases/widget/parent_not_widget.rs
use zng::prelude_wgt::widget;

#[widget($crate::Foo)]
pub struct Foo(f32);

fn main() {}
